<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_potential_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aluminium_texture"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
        android:id="@+id/activity_potential_name"
        style="@style/InfoTextStyle"
        android:textSize="14sp"
        android:text="@string/potential_activity_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2" >

        <com.mkulesh.mmd.widgets.PotentialView
            android:id="@+id/activity_potential_value"
            style="@style/PotentialViewStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:domainName="@string/potential_domain_name"
            app:valueName="@string/potential_value_name" />

        <com.mkulesh.mmd.widgets.PotentialView
            android:id="@+id/activity_potential_derivative"
            style="@style/PotentialViewStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:domainName="@string/potential_domain_name"
            app:valueName="@string/potential_derivative_name" />
    </LinearLayout>

</LinearLayout>