<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Molecular Dynamics - Particles under the microscope
  ~ Copyright (C) 2014-2020 Mikhail Kulesh
  ~
  ~ This program is free software: you can redistribute it and/or modify it under the terms of the GNU
  ~ General Public License as published by the Free Software Foundation, either version 3 of the License,
  ~ or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without
  ~ even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details. You should have received a copy of the GNU General
  ~ Public License along with this program.
  -->

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/multitouch_simpletap"
            android:gravity="center_horizontal"
            android:textAppearance="@style/SurfaceSchemaTextAppearance"
            android:text="@string/conditions_change_dialog"
            android:textColor="?attr/colorInfoText" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/multitouch_simpletap_left"
            android:gravity="left"
            android:textAppearance="@style/SurfaceSchemaTextAppearance"
            android:text="@string/thermal_change_dialog"
            android:textColor="?attr/colorInfoText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/multitouch_pinch"
                android:gravity="center_horizontal|top"
                android:paddingBottom="10dp"
                android:textAppearance="@style/SurfaceSchemaTextAppearance"
                android:text="@string/action_zoom"
                android:textColor="?attr/colorInfoText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/multitouch_drag"
                android:gravity="center_horizontal|bottom"
                android:paddingTop="10dp"
                android:textAppearance="@style/SurfaceSchemaTextAppearance"
                android:text="@string/action_drag"
                android:textColor="?attr/colorInfoText" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/multitouch_simpletap_right"
            android:gravity="right"
            android:textAppearance="@style/SurfaceSchemaTextAppearance"
            android:text="@string/gravity_change_dialog"
            android:textColor="?attr/colorInfoText" />
    </TableRow>

    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:gravity="center_horizontal|bottom">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            android:visibility="invisible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableBottom="@drawable/multitouch_simpletap_bottom"
            android:gravity="center_horizontal"
            android:textAppearance="@style/SurfaceSchemaTextAppearance"
            android:text="@string/timestep_change_dialog"
            android:textColor="?attr/colorInfoText" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel" />
    </TableRow>

</TableLayout>