<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Molecular Dynamics - Particles under the microscope
  ~ Copyright (C) 2014-2020 Mikhail Kulesh
  ~
  ~ This program is free software: you can redistribute it and/or modify it under the terms of the GNU
  ~ General Public License as published by the Free Software Foundation, either version 3 of the License,
  ~ or (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without
  ~ even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details. You should have received a copy of the GNU General
  ~ Public License along with this program.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ControlDialogBgStyle">

    <LinearLayout style="@style/ControlDialogStrokeStyle">

        <TextView
            android:id="@+id/control_dialog_title"
            style="@style/ControlDialogTextStyle" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/button_norm_fullenergy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/energy_norm_fullenergy"
                android:src="@drawable/ic_norm_fullenergy" />

            <ImageButton
                android:id="@+id/button_norm_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/energy_norm_temperature"
                android:src="@drawable/ic_norm_temperature" />

            <ImageButton
                android:id="@+id/button_norm_none"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/energy_norm_none"
                android:src="@drawable/ic_norm_none" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>